--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==3.2.9
 python-dateutil~=2.8.2
-geojson~=2.5.0
-djangorestframework~=3.12.4
+pytz==2021.3
+requests==2.26.0
+six==1.11.0
+sqlparse==0.4.2
+urllib3==1.26.7
+idna==3.3
+asgiref==3.4.1
+certifi==2021.10.8
