--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
 Django==3.2.9
-python-dateutil~=2.8.2
+django-cors-headers==3.10.0
+django-filter==21.1
+djangorestframework==3.12.4
+geojson==2.5.0
+idna==3.3
+importlib-metadata==4.8.2
+Markdown==3.3.6
+names==0.3.0
+point==0.0.1
+python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
 six==1.11.0
 sqlparse==0.4.2
 urllib3==1.26.7
-idna==3.3
-asgiref==3.4.1
-certifi==2021.10.8
+zipp==3.6.0
