--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -31,4 +31,4 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 8000
 
 #Tell image what to do when it starts as a container
-CMD /incidentapp/start.sh
+CMD python manage.py migrate
